# spot2yoto

./: .gitignore  CLAUDE.md  Dockerfile  README.md  config.example.yaml  cspell.json  docker-compose.yaml  pyproject.toml
.github/workflows/: release.yml
src/spot2yoto/: __init__.py  cli.py  config.py  exceptions.py  models.py  spotify.py  state.py  sync.py  ui.py  yoto_auth.py  yoto_client.py
tests/: conftest.py  test_cli.py  test_config.py  test_exceptions.py  test_models.py  test_spotify.py  test_state.py  test_sync.py  test_ui.py  test_yoto_auth.py  test_yoto_client.py
