[project]
name = "spot2yoto"
dynamic = ["version"]
description = "Sync Spotify playlists to Yoto MYO cards"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
    "spotipy>=2.23",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "yt-dlp>=2024.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.scripts]
spot2yoto = "spot2yoto.cli:cli"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/spot2yoto/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/spot2yoto"]

[tool.pytest.ini_options]
testpaths = ["tests"]
